--- a/studio.html
+++ b/studio.html
@@ -65,10 +65,10 @@
 <!--Чим ми займаэмось-->
     <section>
           <h2 class="work">Чим ми займаємося</h2>
-          <ul class="list">  
-            <li><img src="./images/box1.jpg" alt="створення сайту" width="370"> </li>    
-            <li> <img src="./images/box2.jpg" alt="тестування на мобільних пристроях"  width="370">   </li>
-            <li><img src="./images/box3.jpg" alt="вибір кольорової гами " width="370"></li>
+          <ul class="list ">  
+            <li class="list-foto"><img src="./images/box1.jpg" alt="створення сайту" width="370"> </li>    
+            <li  class="list-foto"> <img src="./images/box2.jpg" alt="тестування на мобільних пристроях"  width="370">   </li>
+            <li class="list-foto">   <img src="./images/box3.jpg" alt="вибір кольорової гами " width="370"></li>
           </ul>
      </section>
 
