--- a/portfolio.html
+++ b/portfolio.html
@@ -46,18 +46,18 @@
          </ul>
         
          <ul class="list">         
-              <li>
+              <li class="list-card">
               <a class="list-portfolio" href=""> <img src="./image_portfolio/img.jpg" alt="сторінка сайту" width="370">
                <h2  class="list-porf" >Технокряк</h2>
                <p class="list-phase">Веб-сайт</p>
               </a>
            </li>
-           <li > <a class="list-portfolio" href="">    <img src="./image_portfolio/img11.jpg" alt="спорт" width="370">
+           <li class="list-card"> <a class="list-portfolio" href="">    <img src="./image_portfolio/img11.jpg" alt="спорт" width="370">
                  <h2 class="list-porf"> Постер New Orlean vs Golden Star</h2>
                  <p class="list-phase">Дизайн</p>
                  </a>
            </li>
-           <li > 
+           <li class="list-card"> 
                  <a class="list-portfolio" href="">  
                 <img src="./image_portfolio/img12.jpg" alt="назва ресторану" width="370">
                 <h2 class="list-porf"> Ресторан Seafood </h2>
@@ -66,7 +66,7 @@
  
 
             </li>
-            <li > 
+            <li class="list-card"> 
                 <a class="list-portfolio" href=""> 
                 <img src="./image_portfolio/img13.jpg" alt="навушники" width="370">
                 <h2 class="list-porf"> Проєкт Prime</h2>
@@ -75,34 +75,35 @@
 
 
             </li>
-            <li > 
+            
+            <li class="list-card"> 
                 <a class="list-portfolio" href="">  
                 <img src="./image_portfolio/img14.jpg" alt="коробкиа" width="370">
                 <h2 class="list-porf"> Проєкт Boxes</h2>
                 <p class="list-phase"> Додаток </p>
                 </a>
             </li>
-             <li > <a class="list-portfolio" href=""> 
+             <li class="list-card"> <a class="list-portfolio" href=""> 
                 <img src="./image_portfolio/img15.jpg" alt="монітор" width="370">
                 <h2 class="list-porf"> Inspiration has no Borders </h2>
                  <p class="list-phase"> Веб-сайт </p>
                  </a>
             </li>
-            <li > 
+            <li class="list-card"> 
                 <a class="list-portfolio" href=""> 
                 <img src="./image_portfolio/img16.jpg" alt="журнал" width="370">
                  <h2 class="list-porf" > Видання Limited Edition </h2>
                 <p class="list-phase"> Дизайн</p>
                 </a>
             </li>
-            <li >
+            <li class="list-card">
                 <a class="list-portfolio" href="">  
                 <img src="./image_portfolio/img17.jpg" alt="етикетка" width="370">
                 <h2 class="list-porf"> Проєкт LAB </h2>
                  <p class="list-phase"> Маркетинг </p>
                  </a>
             </li>
-            <li > 
+            <li class="list-card"> 
                 <a class="list-portfolio" href=""> 
                 <img src="./image_portfolio/img18.jpg" alt="відображення додатку" width="370">
                 <h2 class="list-porf"> Growing Business </h2>
