робота над розміщення  елементів

--- a/studio.html
+++ b/studio.html
@@ -14,11 +14,9 @@
 </head>
 <body>
     <header class="header">
-        <section class="section">   
-
-
-
-        <nav  class="heder-list">
+       <section class="section">
+         <div class="heder-content">  
+           <nav class="heder-list"  >
             <!--Шапка-->
             <a  class="link-logo" href=""> Web<span class="port">Studio</span> </a>
             <ul class="list">
@@ -26,22 +24,22 @@
               <li class="nav-list" > <a class="link-list"   href="./portfolio.html"> Портфоліо  </a> </li>
               <li  class="nav-list"><a class="link-list"   href="" >Контакти</a>   </li>
             </ul>
-        </nav>
-        <ul class="list">
-             <li class="mail"> <a  class="link-list-contacts" href="mailto:info@devstudio.com "> info@devstudio.com </a></li>
-             <li class="contact-number">  <a  class="link-list-contacts"  href="tel:380961111111"> +38 096 111 11 11 </a> </li>
-           
-        </ul>
+             </nav>     
+             <ul class="list-heder">
+                <li class="mail"> <a  class="link-list-contacts" href="mailto:info@devstudio.com "> info@devstudio.com </a></li>
+                <li class="contact-number">  <a  class="link-list-contacts"  href="tel:380961111111"> +38 096 111 11 11 </a> </li>
+             </ul>
+         </div>   
 
-
-        </section>
+                 
+ 
+       </section>
 
 
     </header>
   <main>
-    <!--Заголовок-->
-
-    <section class="men-title"> 
+   
+     <section class="men-title">
         <h1 class="title">Ефективні рішення для вашого бізнесу </h1>
         <button  class="button-service"    type="button">Замовити послугу</button>
     </section>
