--- a/studio.html
+++ b/studio.html
@@ -50,6 +50,7 @@
 
 
 <!--Послуги-->
+    <section class="section">
      <ul class="list-services">
         <li class="services">
             <h3 class="list-title">УВАГА ДО ДЕТАЛЕЙ</h3> 
@@ -104,7 +105,7 @@
                 </li>
           
             </ul>
-          </div> 
+      </div> 
     </main>
     
 
