--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
          
            <!--<h1> Порфоліо</h1>-->
          <div class="container">
-            <ul class="list  list-button">
+            <ul class="list">
                <li><button type="button" class="list-button ">Всі</button></li>
                <li> <button type="button"class="list-button">Веб-сайти</button></li>
                <li> <button type="button" class="list-button" >Додатки</button></li>
