--- a/studio.html
+++ b/studio.html
@@ -45,7 +45,7 @@
       
     </header>
   <main>
- <section class="section  men-title"> 
+ <section class="men-title"> 
      <div class=" container">
         <h1 class="title">Ефективні рішення для вашого бізнесу </h1>
         <button  class="button-service"    type="button">Замовити послугу</button>
@@ -80,10 +80,10 @@
 
 </section>
 <!--Чим ми займаэмось-->
-<section class="section">  
+<section class="section-work">  
     <div class="container">
           <h2 class="work">Чим ми займаємося</h2>
-          <ul class="list ">  
+          <ul class="list-work ">  
             <li class="list-foto"><img src="./images/box1.jpg" alt="створення сайту" width="370"> </li>    
             <li  class="list-foto"> <img src="./images/box2.jpg" alt="тестування на мобільних пристроях"  width="370">   </li>
             <li class="list-foto">   <img src="./images/box3.jpg" alt="вибір кольорової гами " width="370"></li>
@@ -95,22 +95,34 @@
 <section class="section">  
      <div class="container">
           <h2 class="work">Наша команда</h2>
-            <ul class="list">   
+            <ul class="comanda-list">   
                 <li class="foto-work"> <img src="./images/img1.jpg" alt="дизайнер компанії" width="270">
+
+                 <div>  
                       <h3 class="list-comanda">Ігор Дем'яненко</h3>
                       <p class="list-profession">Product Designer</p>
+                 </div>
+
                 </li>
                 <li class="foto-work">  <img src="./images/img2.jpg" alt="розробник інтерфейсу" width="270">
+                 <div>  
                        <h3 class="list-comanda" > Ольга Рєпіна </h3> 
-                      <p class="list-profession" >Frontend Developer</p>  
+                       <p class="list-profession" >Frontend Developer</p>  
+                 </div>
+
                 </li>
                 <li class="foto-work">  <img src="./images/img6.jpg" alt="маркетолог" width="270">
+                  <div>  
                         <h3 class="list-comanda"> Микола Тарасов </h3>
-                       <p class="list-profession"> Marketing </p>      
+                        <p class="list-profession"> Marketing </p>
+                  </div>     
+
                 </li>
                 <li class="foto-work" > <img src="./images/img7.jpg" alt="дизайнер інтерфейсу користувача" width="270">
+                  <div>
                       <h3 class="list-comanda" > Михайло Єрмаков </h3> 
-                     <p class="list-profession" > UI Designer </p>   
+                      <p class="list-profession" > UI Designer </p> 
+                  </div>    
                 </li>
           
             </ul>
